@@ -4,6 +4,9 @@ Change history
 Release Candidate 1
 ===================
 
+- Applied Ernst Naezer's patch to allow MR to throw a descriptive
+  exception message when two helpers are registered using the same key
+
 - Added a hack to the WebFormsViewEngine to accomodate different behavior
   with respect to invoking PageParser.GetCompiledInstance on ASP.NET 2.0
 
